--- a/UI-project/src/index.css
+++ b/UI-project/src/index.css
@@ -1,1 +1,22 @@
 @import "tailwindcss";
+
+
+#right::-webkit-scrollbar {
+  display: none;
+}
+
+@keyframes scrollInfinite {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.scrolling-wrapper {
+  display: flex;
+  gap: 1.25rem; 
+  width: max-content; 
+  animation: scrollInfinite 20s linear infinite;
+}
